@@ -146,8 +146,26 @@ close(MAKEFILE);
 $answer = "bar baz biz\nbar baz\n";
 &compare_output($answer, &get_logfile(1));
 
+# Test #10
+
 &run_make_with_options("$makefile3", "one", &get_logfile);
 $answer = "bar biz\n";
+&compare_output($answer, &get_logfile(1));
+
+# Test #11
+# PR/1709: Test semicolons in target-specific variable values
+
+$makefile4 = &get_tmpfile;
+
+open(MAKEFILE, "> $makefile4");
+print MAKEFILE <<'EOF';
+foo : FOO = ; ok
+foo : ; @echo '$(FOO)'
+EOF
+close(MAKEFILE);
+
+&run_make_with_options("$makefile4", "", &get_logfile);
+$answer = "; ok\n";
 &compare_output($answer, &get_logfile(1));
 
 
